[gd_scene load_steps=4 format=3 uid="uid://iaoe5hdbvin"]

[ext_resource type="LabelSettings" uid="uid://bp0thv8b5ccpq" path="res://title_label_settings.tres" id="1_5l5kr"]
[ext_resource type="Script" path="res://start_screen.gd" id="1_8cuq0"]
[ext_resource type="Theme" uid="uid://dsbdv5340htvt" path="res://game_ui_theme.tres" id="2_mnl5q"]

[node name="StartScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8cuq0")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.148989, 0.0781567, 0.278447, 1)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -259.5
offset_top = -68.5
offset_right = 259.5
offset_bottom = 68.5
grow_horizontal = 2
grow_vertical = 2
text = "Game Title"
label_settings = ExtResource("1_5l5kr")

[node name="HBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -118.5
offset_top = -220.0
offset_right = 118.5
offset_bottom = -119.0
grow_horizontal = 2
grow_vertical = 0

[node name="StartGame" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme = ExtResource("2_mnl5q")
text = "Start Game"

[node name="Settings" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme = ExtResource("2_mnl5q")
text = "Settings"

[node name="Credits" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme = ExtResource("2_mnl5q")
text = "Credits
"

[connection signal="pressed" from="HBoxContainer/StartGame" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="HBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="HBoxContainer/Credits" to="." method="_on_credits_pressed"]
